// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkJourneyArrow should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-journey-arrow"
  />
</DocumentFragment>
`;

exports[`BpkJourneyArrow should render with stops 1`] = `
<DocumentFragment>
  <div
    class="bpk-journey-arrow"
  >
    <div
      class="bpk-journey-arrow__stop"
    />
    <div
      class="bpk-journey-arrow__stop"
    />
    <div
      class="bpk-journey-arrow__stop"
    />
  </div>
</DocumentFragment>
`;
